fix : layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 #root {
   max-width: 1280px;
-  padding: 2rem;
-  margin: 0 auto;
+  /* padding: 2rem; */
+  /* margin: 0 auto; */
+  min-width: 100vw;
+  min-height: 100vh;
   text-align: center;
 }
 
